tests/core/snapshots/postgres-array-type.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(id: "main", src: "products.sql", type: Sql)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Product {
  id: Int
  scores: JSON
  tags: JSON
}

type Query {
  products: [Product] @postgres(table: "products")
}
