tests/core/snapshots/postgres-date-time-types.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(id: "main", src: "events.sql", type: Sql)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Event {
  createdAt: DateTime
  id: Int
  scheduledDate: Date
  startTime: String
  updatedAt: DateTime
}

type Query {
  events: [Event] @postgres(table: "events")
}
