tests/core/snapshots/postgres-db-required-for-multiple.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "@postgres requires 'db' when multiple Postgres connections are defined",
    "trace": [
      "Query",
      "users",
      "@postgres"
    ],
    "description": null
  }
]
