tests/core/snapshots/postgres-delete.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Mutation {
  deleteUser(id: Int!): User
}

type Query {
  users: [User]
}

type User {
  email: String
  id: Int
  name: String
}

schema {
  query: Query
  mutation: Mutation
}
