tests/core/snapshots/postgres-filter-without-where.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Mutation {
  updateUser(name: String): User
}

type Query {
  users: [User]
}

type User {
  email: String
  id: Int
  name: String
}

schema {
  query: Query
  mutation: Mutation
}
