tests/core/snapshots/postgres-insert.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Mutation {
  createUser(name: String!, email: String): User
}

type Query {
  users: [User]
}

type User {
  email: String
  id: Int
  name: String
}

schema {
  query: Query
  mutation: Mutation
}
